Change form input to 'date' and adjust layout and edit redirect

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+    <section class="header">
+        <h1>Python Developer</h1>
+        <p>Check out my portfolio, I had a blast with these projects!</p>
+        <img src="https://www.ericsryan.com/static/images/IMG_0543.jpg" alt="Headshot of myself">
+    </section>
     <section id="projects">
         <div id="triangle3"></div>
         <i class="fas fa-file-code"></i>
